Work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(adjustBackgroundSpecies)
 export(alignResource)
 export(distanceSSLogYield)
 export(getMaxF)
+export(getRetainProbGear)
 export(getYieldVsF)
 export(markBackground)
 export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
+export(plotCatchVsSize)
 export(plotDeath)
 export(plotDietX)
 export(plotEnergyBudget)
@@ -21,6 +23,7 @@ export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
 export(plotlyBiomassRelative)
+export(plotlyCatchVsSize)
 export(plotlyDeath)
 export(plotlyEnergyBudget)
 export(plotlyResourcePred)
@@ -36,6 +39,7 @@ export(tuneGrowth)
 export(tuneParams)
 export(updateInitialValues)
 export(validSim)
+export(valid_gears_arg)
 import(assertthat)
 import(dplyr)
 import(ggplot2)
