--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,6 +73,7 @@ Collate:
     getYieldVsFcurve.R
     validSim.R
     plots.R
+    discards.R
 Encoding: UTF-8
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
