--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(removeBackgroundSpecies)
 export(scaleAbundance)
 export(scaleDownBackground)
 export(singleSpeciesSteady)
+export(tuneEcopath)
 export(tuneGrowth)
 export(tuneParams)
 export(updateInitialValues)
