--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     vdiffr
 Collate:
     ecopath_tune.R
+    exponentControl.R
     alignResource.R
     manipulateParams.R
     mizerExperimental-package.R
