--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mizerExperimental
 Type: Package
 Title: Extends the mizer package with experimental features
-Version: 2.4.0.9004
+Version: 2.4.0.9005
 Author: Various contributors
 Maintainer: Gustav Delius <gustav.delius@gmail.com>
 Description: This mizer extension package collects contributions from the mizer
@@ -36,6 +36,7 @@ Suggests:
 Collate:
     alignResource.R
     manipulateParams.R
+    matchYield.R
     mizerExperimental-package.R
     plotDiet.R
     plotBiomassFlux.R
