--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(alignResource)
 export(distanceSSLogYield)
 export(getYieldVsF)
 export(markBackground)
+export(matchYield)
 export(plotBiomassFlux)
 export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
