--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(adjustBackgroundSpecies)
 export(alignResource)
+export(comparedietmatrix)
 export(distanceSSLogYield)
 export(getYieldVsF)
+export(guildplot)
 export(markBackground)
 export(matchYield)
 export(plotBiomassFlux)
@@ -15,6 +17,7 @@ export(plotEnergyBudget)
 export(plotNumberVsSpecies)
 export(plotResourceLevel)
 export(plotResourcePred)
+export(plotSpeciesWithTimeRange)
 export(plotSpectra2)
 export(plotSpectraRelative)
 export(plotYieldRelative)
